crates/aven-check/tests/fixtures/check/invalid/call-arg-match-subject.av
f : (Text) -> Int
f = (x) => { text: x, value: 1 }.value
result : Int = f(42) ?>
  _ => 1
